# emt

./: Cargo.toml  LICENSE  README.md  example.elf
common/: Cargo.toml
common/src/: lib.rs  link.rs  runtime.rs  test.rs
common/src/runtime/: event.rs  mod.rs  runtime_block.rs
core/: Cargo.toml
core/src/: lib.rs
emt/: Cargo.toml
emt-core/: Cargo.toml
emt-core/src/: lib.rs
emt-core/src/runtime/: event.rs  mod.rs  runtime_block.rs
emt-host/: Cargo.toml
emt-host/src/: handlers.rs  main.rs
emt-rt/: Cargo.toml
emt-rt/src/: lib.rs  runtime_block.rs
emt-run/: Cargo.toml
emt-run/src/: main.rs
emt/src/: cli.rs  main.rs
emt/src/host/: handlers.rs  mod.rs  models.rs
emt/src/link/: hosted.rs  mod.rs  probe.rs
emt/src/runner/: in_memory.rs  mod.rs  probe.rs  qemu.rs
example/: Cargo.toml  Embed.toml
example/.cargo/: config
example/src/: main.rs  tests.rs
rt-core/: Cargo.toml
rt-core/src/runtime/: event.rs  mod.rs  runtime_block.rs
runner/: Cargo.toml
runtime/: Cargo.toml
runtime-test/: Cargo.toml
runtime-test/src/: main.rs  tests.rs
runtime/src/: event.rs  lib.rs  runtime_block.rs
