[package]
name = "emt"
version = "0.1.0"
authors = ["Martin Carltoft <martin@bitbleep.com>"]
edition = "2018"

[dependencies]
emt-core = { path = "../emt-core" }
probe-rs = "0.8.0"
colored = "2"
structopt = "0.3.18"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0.116"
actix-web = "3"
futures = "0.3.6"
