[package]
name = "example"
version = "0.1.0"
authors = ["Martin Carltoft <martin@bitbleep.com"]
edition = "2018"

[dependencies]
runtime = { path = "../runtime" }
cortex-m-rt = "0.6.11"
cortex-m = "0.6.2"
nrf52832-hal = "0.11.0"
panic_rtt = "0.2.0"
embedded-hal = "0.2.3"

# heapless = "0.5.1"
# elevate-protocol = { git = "ssh://git@gitlab.com/technocreatives/elevate/server.git" }
# elevate-board = { path = "../elevate-board" }
# embedded-util = { path = "../embedded-util" }
# elevate-cloud = { path = "../elevate-cloud" }
# core-support = { path = "../core-support" }
# log = "0.4.8"
# fpa =  "0.1.0"
# cast = "0.1.0"

# [dependencies.nrf52832-hal]
# version = "0.10.0"
# default-features = false
# features = ["rt"]
