[package]
name = "example"
version = "0.1.0"
authors = ["Martin Carltoft <martin@bitbleep.com"]
edition = "2018"

[dependencies]
common = { path = "../common" }
runtime = { path = "../runtime" }
cortex-m-rt = "0.6.11"
cortex-m = "0.6.2"
embedded-hal = "0.2.3"
nb = "0.1.2"
nrf52832-hal = { version = "0.11.0", default-features = false, features = ["rt", "xxAB-package"] }
